--- a/features/container/sentinel/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/features/container/sentinel/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -25,7 +25,8 @@ featuresRepositories = \
     mvn:org.opennms.karaf/opennms/${project.version}/xml/spring-legacy, \
     mvn:org.opennms.karaf/opennms/${project.version}/xml/karaf-extensions, \
     mvn:org.opennms.karaf/opennms/${project.version}/xml/sentinel, \
-    mvn:org.apache.karaf.features/standard/${karafVersion}/xml/features
+    mvn:org.apache.karaf.features/standard/${karafVersion}/xml/features, \
+    mvn:io.hawt/hawtio-karaf/${hawtio.version}/xml/features
 
 #
 # Comma separated list of features to install at startup
