--- a/features/sentinel/repository/pom.xml
+++ b/features/sentinel/repository/pom.xml
@@ -34,8 +34,6 @@
                                 <repository>mvn:org.opennms.karaf/opennms/${project.version}/xml/karaf-extensions</repository>
                                 <!-- Add Sentinel features -->
                                 <descriptor>mvn:org.opennms.karaf/opennms/${project.version}/xml/sentinel</descriptor>
-                                <!-- Additional tools -->
-                                <descriptor>mvn:io.hawt/hawtio-karaf/${hawtio.version}/xml/features</descriptor>
                             </descriptors>
                             <!-- To ensure that all JAR files for a feature
                                 are included in the repository tar.gz file, add the feature to this list. -->
@@ -91,7 +89,6 @@
 
                                 <!-- Other features -->
                                 <feature>cassandra-driver/${cassandraVersion}</feature>
-                                <feature>hawtio</feature>
                             </features>
                             <repository>${project.build.directory}/maven-repo</repository>
                         </configuration>
@@ -116,6 +113,28 @@
                                     <filtering>true</filtering>
                                 </resource>
                             </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <phase>prepare-package</phase>
+                        <goals><goal>run</goal></goals>
+                        <configuration>
+                            <target>
+                                <delete>
+                                  <fileset dir="${project.build.directory}/maven-repo/org/eclipse/jetty" />
+                                  <dirset dir="${project.build.directory}/maven-repo/org/eclipse/jetty" />
+                                  <fileset dir="${project.build.directory}/maven-repo/org/ops4j/pax/web/pax-web-jetty" />
+                                  <dirset dir="${project.build.directory}/maven-repo/org/ops4j/pax/web/pax-web-jetty" />
+                                  <fileset dir="${project.build.directory}/maven-repo/org/ops4j/pax/web/pax-web-features" includes="**/*-jettyconfig.xml" />
+                                </delete>
+                            </target>
                         </configuration>
                     </execution>
                 </executions>
