coverage should always run the full suite

--- a/.circleci/main/jobs/tests/integration/integration-test-with-coverage.yml
+++ b/.circleci/main/jobs/tests/integration/integration-test-with-coverage.yml
@@ -10,4 +10,4 @@ jobs:
       - run-integration-tests:
           rerun-failtest-count: 0
           failure-option: --fail-never
-          changes-only: true
+          changes-only: false
