NMS-15636: enable license txt generation in RPM and Debian packages

--- a/debian/rules
+++ b/debian/rules
@@ -13,6 +13,7 @@ export OPTS_PROFILES=-Prun-expensive-tasks
 
 export BUILDDEFINES=\
 	-Dopennms.home=/usr/share/opennms \
+	-Denable.license=true \
 	-Ddist.dir=$(CURDIR)/debian -Ddist.name=temp \
 	-Dinstall.dir=/usr/share/opennms \
 	-Dinstall.bin.dir=/usr/share/opennms/bin \
