--- a/opennms-container/core/Dockerfile
+++ b/opennms-container/core/Dockerfile
@@ -1,7 +1,7 @@
 ##
 # Use Java base image and setup required RPMS as cacheable image.
 ##
-ARG BASE_IMAGE="opennms/deploy-base:jre-2.1.0.b175"
+ARG BASE_IMAGE="opennms/deploy-base:ubuntu-3.0.1.b220-jre-11"
 
 FROM ${BASE_IMAGE} as core-tarball
 
