auto-review updates

--- a/.github/assign-by-files.yml
+++ b/.github/assign-by-files.yml
@@ -1,12 +1,13 @@
 ---
 "**/*.adoc":
   - Bonrob2
-  - emarsh1995
 
 "opennms-doc/**/*":
   - Bonrob2
-  - emarsh1995
 
 "docs/**/*":
   - Bonrob2
-  - emarsh1995
+
+".circleci/**/*":
+  - RangerRick
+  - mershad-manesh
