NMS-15600, NMS-15601: fix paths to container script in systemd unit file

--- a/container/shared/src/main/resources/etc/container.service
+++ b/container/shared/src/main/resources/etc/container.service
@@ -10,8 +10,8 @@ EnvironmentFile=-@SYSCONFDIR@/@NAME_LC@
 PIDFile=@PIDFILE@
 Type=forking
 
-ExecStart=@INITDIR@/@NAME_LC@ start
-ExecStop=@INITDIR@/@NAME_LC@ stop
+ExecStart=@INSTPREFIX@/bin/@NAME_LC@ start
+ExecStop=@INSTPREFIX@/bin/@NAME_LC@ stop
 
 AmbientCapabilities=CAP_NET_RAW CAP_NET_BIND_SERVICE
 
