feat: configured openapi to include V1 REST on a separate json so V1 and V2 are available. Other fixes to allow doc be generated.

--- a/features/measurements/api/pom.xml
+++ b/features/measurements/api/pom.xml
@@ -66,5 +66,9 @@
       <artifactId>org.opennms.core.test-api.xml</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+    </dependency>
   </dependencies>
 </project>
