--- a/debian/rules
+++ b/debian/rules
@@ -217,7 +217,8 @@ install: build
 	mv debian/temp/etc/* debian/opennms-common/etc/opennms/
 	mv debian/temp/lib   debian/opennms-common/usr/share/opennms/
 	mv debian/temp/agent   debian/opennms-common/usr/share/opennms/
-	install -d -m 755 debian/opennms-common/var/lib/opennms/xsds
+	install -d -m 755 debian/opennms-common/var/lib/opennms/{mibs,xsds}
+	mv debian/temp/share/mibs/* debian/opennms-common/var/lib/opennms/mibs/
 	mv debian/temp/share/xsds/* debian/opennms-common/var/lib/opennms/xsds/
 	find debian/opennms-common/etc/opennms -type f -execdir chmod 644 {} \;
 	chmod 640 debian/opennms-common/etc/opennms/users.xml
