--- a/.circleci/main/commands/executions/run-integration-tests.yml
+++ b/.circleci/main/commands/executions/run-integration-tests.yml
@@ -60,12 +60,18 @@ commands:
           name: Gather system logs
           when: always
           command: |
-            mkdir -p ~/build-results/system-logs
-            (dmesg || :) > ~/build-results/system-logs/dmesg 2>&1
-            (ps auxf || :) > ~/build-results/system-logs/ps 2>&1
-            (free -m || :) > ~/build-results/system-logs/free 2>&1
-            (docker stats --no-stream || :) > ~/build-results/system-logs/docker_stats 2>&1
-            cp -R /tmp/jvmprocmon ~/build-results/system-logs/ || :
+            mkdir -p ~/test-results/system-logs
+            (dmesg || :) > ~/test-results/system-logs/dmesg 2>&1
+            (ps auxf || :) > ~/test-results/system-logs/ps 2>&1
+            (free -m || :) > ~/test-results/system-logs/free 2>&1
+            cp -R /tmp/jvmprocmon ~/test-results/system-logs/ || :
+
+            (date '+%T' || :)                       > ~/test-results/system-logs/docker_stats 2>&1
+            (docker stats --all --no-stream || :) >> ~/test-results/system-logs/docker_stats 2>&1
+            (docker ps ---all || :)               >> ~/test-results/system-logs/docker_stats 2>&1
+            for CONTAINER in `docker ps --all --quiet`; do
+              ((docker logs --timestamps "$CONTAINER" 2>&1 | tail -n 20 ) || :) > ~/test-results/system-logs/"docker-${CONTAINER}.log" 2>&1
+            done
       - store_test_results:
           path: ~/test-results
       - store_artifacts:
