--- a/.circleci/main/commands/executions/run-smoke-tests.yml
+++ b/.circleci/main/commands/executions/run-smoke-tests.yml
@@ -41,7 +41,14 @@ commands:
             (dmesg || :) > ~/test-results/system-logs/dmesg 2>&1
             (ps auxf || :) > ~/test-results/system-logs/ps 2>&1
             (free -m || :) > ~/test-results/system-logs/free 2>&1
-            (docker stats --no-stream || :) > ~/test-results/system-logs/docker_stats 2>&1
+            cp -R /tmp/jvmprocmon ~/test-results/system-logs/ || :
+
+            (date '+%T' || :)                      > ~/test-results/system-logs/docker_stats 2>&1
+            (docker stats --all --no-stream || :) >> ~/test-results/system-logs/docker_stats 2>&1
+            (docker ps ---all || :)               >> ~/test-results/system-logs/docker_stats 2>&1
+            for CONTAINER in `docker ps --all --quiet`; do
+              ((docker logs --timestamps "$CONTAINER" 2>&1 | tail -n 20 ) || :) > ~/test-results/system-logs/"docker-${CONTAINER}.log" 2>&1
+            done
             cp -R /tmp/jvmprocmon ~/test-results/system-logs/ || :
             ls -alh ~/project/smoke-test/ || :
       - run:
