NMS-15061: shade axis so it only ends up in the 2 plugins that use it

--- a/features/ticketing/otrs-integration/pom.xml
+++ b/features/ticketing/otrs-integration/pom.xml
@@ -11,6 +11,29 @@
 	<build>
 		<plugins>
 			<plugin>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>${maven.shade.plugin.version}</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals><goal>shade</goal></goals>
+						<configuration>
+							<artifactSet>
+								<includes>
+									<include>axis:*</include>
+								</includes>
+							</artifactSet>
+							<relocations>
+								<relocation>
+									<pattern>axis</pattern>
+									<shadedPattern>org.opennms.shaded.axis</shadedPattern>
+								</relocation>
+							</relocations>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>axistools-maven-plugin</artifactId>
 				<executions>
