--- a/container/karaf/pom.xml
+++ b/container/karaf/pom.xml
@@ -63,7 +63,7 @@
                         <feature>shell-compat</feature>
                         <feature>feature</feature>
                         <feature>jaas</feature>
-                        <feature>ssh</feature>
+                        <feature>ssh/${karafSshdVersion}</feature>
                         <feature>management</feature>
                         <feature>bundle</feature>
                         <feature>config</feature>
