--- a/features/api-layer/common/pom.xml
+++ b/features/api-layer/common/pom.xml
@@ -57,19 +57,21 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.opennms.integration.api</groupId>
-            <artifactId>api</artifactId>
-            <version>${opennmsApiVersion}</version>
+            <groupId>org.opennms.dependencies</groupId>
+            <artifactId>oia-dependencies</artifactId>
+            <type>pom</type>
         </dependency>
+        <!-- add this explicitly to be sure it's marked as scope:compile -->
         <dependency>
             <groupId>org.opennms.integration.api</groupId>
             <artifactId>common</artifactId>
             <version>${opennmsApiVersion}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.opennms.core.health</groupId>
             <artifactId>org.opennms.core.health.api</artifactId>
-	        <version>${project.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.opennms</groupId>
