--- a/features/timeseries/pom.xml
+++ b/features/timeseries/pom.xml
@@ -82,8 +82,9 @@
     </dependency>
     <dependency>
       <groupId>org.opennms.integration.api</groupId>
-      <artifactId>common</artifactId>
+      <artifactId>config</artifactId>
       <version>${opennmsApiVersion}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.opennms.core.ipc.rpc</groupId>
