--- a/.github/workflows/auto-assign.yml
+++ b/.github/workflows/auto-assign.yml
@@ -1,7 +1,7 @@
 name: "Auto Assign Pull Request"
 on:
   pull_request:
-    types: [review_requested, ready_for_review, opened, synchronize, reopened]
+    # types: [review_requested, ready_for_review, opened, synchronize, reopened]
     branches:
       - develop
       - 'foundation-**'
