Revert "NMS-15714: bump sshd to 2.10.0, normalize sshd inclusion"
This reverts commit 3c26fcf4753da3b998e4aac6c23394dda1466b64.

--- a/container/karaf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/container/karaf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -33,7 +33,7 @@ featuresBoot = ( \
     instance/${karafVersion}, \
     package/${karafVersion}, \
     log/${karafVersion}, \
-    ssh/${karafSshdVersion}, \
+    ssh/${karafVersion}, \
     aries-blueprint/${karafVersion}, \
     framework/${karafVersion}, \
     system/${karafVersion}, \
