--- a/features/container/sentinel/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/features/container/sentinel/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -36,7 +36,7 @@ featuresBoot = \
     instance/${karafVersion}, \
     package/${karafVersion}, \
     log/${karafVersion}, \
-    ssh/${karafSshdVersion}, \
+    ssh/${karafVersion}, \
     framework/${karafVersion}, \
     system/${karafVersion}, \
     eventadmin/${karafVersion}, \
