NMS-15431: use sshd-osgi everywhere; share sshd classes with the main classpath if possible

--- a/features/poller/monitors/core/pom.xml
+++ b/features/poller/monitors/core/pom.xml
@@ -130,7 +130,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.sshd</groupId>
-      <artifactId>sshd-core</artifactId>
+      <artifactId>sshd-osgi</artifactId>
       <version>${minaSshdVersion}</version>
     </dependency>
     <dependency>
