NMS-15640: Hide SCV credentials and other metadata secrets

--- a/core/mate/shell-commands/pom.xml
+++ b/core/mate/shell-commands/pom.xml
@@ -41,5 +41,16 @@
       <artifactId>osgi.enterprise</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.github.stefanbirkner</groupId>
+      <artifactId>system-rules</artifactId>
+      <version>1.19.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
