NMS-15742: Update selfmonitor collection

--- a/opennms-base-assembly/src/main/filtered/etc/snmp-graph.properties.d/postgresql-opennms-graph.properties
+++ b/opennms-base-assembly/src/main/filtered/etc/snmp-graph.properties.d/postgresql-opennms-graph.properties
@@ -4,6 +4,7 @@
 
 reports=pgsql.opennms.alarm, \
 pgsql.opennms.event, \
+pgsql.opennms.eventest, \
 pgsql.opennms.node
 
 
@@ -21,9 +22,20 @@ GPRINT:size:MAX:"Max\\: %8.2lf %s\\n"
 report.pgsql.opennms.event.name=OpenNMS Database Events
 report.pgsql.opennms.event.type=nodeSnmp
 report.pgsql.opennms.event.columns=OnmsEventCount
-report.pgsql.opennms.event.command=--title="OpenNMS Database Event Count" \
+report.pgsql.opennms.event.command=--title="OpenNMS Database Events Created In The Past 24 Hours" \
 --vertical-label="Events" \
 DEF:size={rrd1}:OnmsEventCount:AVERAGE \
+AREA:size#7EE600:"Events" \
+GPRINT:size:AVERAGE:" Avg\\: %8.2lf %s" \
+GPRINT:size:MIN:"Min\\: %8.2lf %s" \
+GPRINT:size:MAX:"Max\\: %8.2lf %s\\n"
+
+report.pgsql.opennms.eventest.name=OpenNMS Database Event Estimate
+report.pgsql.opennms.eventest.type=nodeSnmp
+report.pgsql.opennms.eventest.columns=OnmsEventEstimate
+report.pgsql.opennms.eventest.command=--title="OpenNMS Database Event Table Estimate" \
+--vertical-label="Events" \
+DEF:size={rrd1}:OnmsEventEstimate:AVERAGE \
 AREA:size#7EE600:"Events" \
 GPRINT:size:AVERAGE:" Avg\\: %8.2lf %s" \
 GPRINT:size:MIN:"Min\\: %8.2lf %s" \
