--- a/pom.xml
+++ b/pom.xml
@@ -1594,6 +1594,7 @@
 
     <!-- dependency versions -->
     <accessorsSmartVersion>2.4.8</accessorsSmartVersion>
+    <antVersion>1.10.13</antVersion>
     <args4jVersion>2.33</args4jVersion>
     <asmVersion>5.0.4</asmVersion>
     <activemqVersion>5.15.5</activemqVersion>
@@ -1617,6 +1618,7 @@
     <commonsConfigurationVersion>1.6</commonsConfigurationVersion>
     <commonsCsvVersion>1.5</commonsCsvVersion>
     <commonsDigesterVersion>2.1</commonsDigesterVersion>
+    <commonsExecVersion>1.2</commonsExecVersion>
     <commonsJexlVersion>2.1.1</commonsJexlVersion>
     <commonsJxpathVersion>1.3</commonsJxpathVersion>
     <commonsIoVersion>2.12.0</commonsIoVersion>
