--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,24 @@
 version: 2
 updates:
+
+  - package-ecosystem: "npm"
+    # Look for `package.json` and `lock` files in the `root` directory
+    directory: "/ui"
+    target-branch: "develop"
+    reviewers:
+      - "mikewrosey"
+    labels:
+      - "dependency update"
+    commit-message:
+      prefix: "build"
+      include: "scope"
+    schedule:
+      interval: "weekly"
+
   - package-ecosystem: "npm"
     # Look for `package.json` and `lock` files in the `root` directory
     directory: "/core/web-assets/"
-    target-branch: "foundation-2022"
+    target-branch: "foundation-2023"
     versioning-strategy: "increase-if-necessary"
     reviewers:
       - "rangerrick"
@@ -14,15 +29,29 @@ updates:
       include: "scope"
     schedule:
       interval: "daily"
+    # these will need to be dealt with in a more deliberate way
     ignore:
+      - dependency-name: "angular"
+      - dependency-name: "angular-animate"
+      - dependency-name: "angular-cookies"
+      - dependency-name: "angular-mocks"
+      - dependency-name: "angular-resource"
+      - dependency-name: "angular-route"
+      - dependency-name: "angular-sanitize"
+      - dependency-name: "c3"
       - dependency-name: "d3"
+      - dependency-name: "flot"
       - dependency-name: "ionicons"
       - dependency-name: "@types/lodash"
       - dependency-name: "@types/node"
+      # do these when we upgrade to webpack 5
+      - dependency-name: "assets-webpack-plugin"
+      - dependency-name: "css-loader"
+      - dependency-name: "expose-loader"
 
   - package-ecosystem: "maven"
     directory: "/"
-    target-branch: "foundation-2022"
+    target-branch: "foundation-2023"
     reviewers:
       - "rangerrick"
     labels:
