reinstate updatePolicy, but make it a lot smarter
* non-snapshot repos should _never_ check for updates, upstream
  versions (should) never change if they're not snapshots
* snapshots default to checking every 8 hours but can be overridden
  on the CLI

--- a/dependencies/jasper/pom.xml
+++ b/dependencies/jasper/pom.xml
@@ -113,6 +113,13 @@
     <repository>
       <id>jaspersoft-third-party</id>
       <url>https://maven.opennms.org/repository/thirdparty/</url>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>never</updatePolicy>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
     </repository>
   </repositories>
 </project>
