--- a/pom.xml
+++ b/pom.xml
@@ -1574,6 +1574,7 @@
     <!-- whether to enable snapshot dependencies when building -->
     <enable.snapshots>false</enable.snapshots>
 
+    <updatePolicy>interval:480</updatePolicy> <!-- 8 hours, only used for snapshot repos -->
     <maven.clover.licenseLocation>${user.home}/.m2/clover.license</maven.clover.licenseLocation>
 
     <karaf.servicemix.specs.version>2.9.0</karaf.servicemix.specs.version>
@@ -1852,12 +1853,13 @@
         </plugins>
       </build>
       <repositories>
-        <!-- Disable snapshots for our own artifacts for release bulds -->
+        <!-- Disable snapshots for our own artifacts for release builds -->
         <repository>
           <id>opennms-ossrh</id>
           <url>https://oss.sonatype.org/content/repositories/snapshots</url>
           <releases>
-            <enabled>false</enabled>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
           </releases>
           <snapshots>
             <enabled>false</enabled>
@@ -1953,8 +1955,13 @@
           <id>central</id>
           <name>Maven Central</name>
           <url>https://repo1.maven.org/maven2/</url>
+          <releases>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
+          </releases>
           <snapshots>
             <enabled>true</enabled>
+            <updatePolicy>${updatePolicy}</updatePolicy>
           </snapshots>
         </repository>
         <repository>
@@ -1966,6 +1973,7 @@
           </releases>
           <snapshots>
             <enabled>true</enabled>
+            <updatePolicy>${updatePolicy}</updatePolicy>
           </snapshots>
         </repository>
         <repository>
@@ -1976,6 +1984,7 @@
           </releases>
           <snapshots>
             <enabled>true</enabled>
+            <updatePolicy>${updatePolicy}</updatePolicy>
           </snapshots>
         </repository>
       </repositories>
@@ -1987,8 +1996,13 @@
           <id>central</id>
           <name>Maven Central</name>
           <url>https://repo1.maven.org/maven2/</url>
+          <releases>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
+          </releases>
           <snapshots>
             <enabled>true</enabled>
+            <updatePolicy>${updatePolicy}</updatePolicy>
           </snapshots>
         </pluginRepository>
         <pluginRepository>
@@ -2000,6 +2014,7 @@
           </releases>
           <snapshots>
             <enabled>true</enabled>
+            <updatePolicy>${updatePolicy}</updatePolicy>
           </snapshots>
         </pluginRepository>
       </pluginRepositories>
