--- a/smoke-test/pom.xml
+++ b/smoke-test/pom.xml
@@ -994,6 +994,10 @@
       <id>central</id>
       <name>Maven Central</name>
       <url>https://repo1.maven.org/maven2/</url>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>never</updatePolicy>
+      </releases>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
@@ -1002,6 +1006,10 @@
       <id>opennms-repo</id>
       <name>OpenNMS Mega-Repository</name>
       <url>https://maven.opennms.org/repository/everything/</url>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>never</updatePolicy>
+      </releases>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
