NMS-15663: add license entries for spring security

--- a/features/topology-map/org.opennms.features.topology.app/src/license/THIRD-PARTY.properties
+++ b/features/topology-map/org.opennms.features.topology.app/src/license/THIRD-PARTY.properties
@@ -1,3 +1,5 @@
 colt--colt--1.2.0=mit
 com.hubspot.jinjava--jinjava--2.1.0=apache_v2
 javax.transaction--jta--1.1=cddl_v1_1
+org.springframework.security--spring-security-core--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-remoting--4.2.21.RELEASE_1.ONMS.1=apache_v2
