--- a/opennms-assemblies/minion/src/license/THIRD-PARTY.properties
+++ b/opennms-assemblies/minion/src/license/THIRD-PARTY.properties
@@ -2,7 +2,6 @@ alt.dev.jmta--jmta--1.0=Raphael Szwarc Public Source License, Version 1.0
 avalon-framework--avalon-framework--4.1.3=apache_v1_1
 bsh--bsh--1.3.0=spl_v1_0
 colt--colt--1.2.0=mit
-commons-discovery--commons-discovery--0.2=apache_v2
 findbugs--annotations--1.0.0=lgpl_v2_1
 jakarta-regexp--jakarta-regexp--1.4=apache_v2
 javax.transaction--jta--1.1=cddl_v1_1
@@ -19,3 +18,10 @@ org.samba.jcifs--jcifs--1.3.19=lgpl_v2_1
 org.sblim.slp--sblimSLPClient--1.17=cpl_v1
 org.sblim.wbem--sblimCIMClient--1.17=cpl_v1
 org.simpleframework--org.simpleframework--3.1.3=lgpl_v2_1
+org.springframework.security--spring-security-acl--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-config--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-core--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-ldap--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-remoting--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-taglibs--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-web--4.2.21.RELEASE_1.ONMS.1=apache_v2
