--- a/opennms-config-tester/src/license/THIRD-PARTY.properties
+++ b/opennms-config-tester/src/license/THIRD-PARTY.properties
@@ -1,6 +1,12 @@
 bsh--bsh--1.3.0=spl_v1_0
-commons-discovery--commons-discovery--0.2=apache_v2
 javax.transaction--jta--1.1=cddl_v1_1
 org.sblim.slp--sblimSLPClient--1.17=cpl_v1
 org.sblim.wbem--sblimCIMClient--1.17=cpl_v1
 org.simpleframework--org.simpleframework--3.1.3=lgpl_v2_1
+org.springframework.security--spring-security-acl--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-config--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-core--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-ldap--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-remoting--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-taglibs--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-web--4.2.21.RELEASE_1.ONMS.1=apache_v2
