--- a/opennms-web-dependencies/src/license/THIRD-PARTY.properties
+++ b/opennms-web-dependencies/src/license/THIRD-PARTY.properties
@@ -2,3 +2,10 @@ alt.dev.jmta--jmta--1.0=Raphael Szwarc Public Source License, Version 1.0
 avalon-framework--avalon-framework--4.1.3=apache_v1_1
 javax.transaction--jta--1.1=cddl_v1_1
 org.simpleframework--org.simpleframework--3.1.3=lgpl_v2_1
+org.springframework.security--spring-security-acl--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-config--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-core--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-ldap--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-remoting--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-taglibs--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-web--4.2.21.RELEASE_1.ONMS.1=apache_v2
