--- a/opennms-webapp/src/license/THIRD-PARTY.properties
+++ b/opennms-webapp/src/license/THIRD-PARTY.properties
@@ -8,3 +8,10 @@ opensymphony--ognl--2.6.11=bsd_3
 org.opennms--jrrd2-api--2.0.3=gpl_v2_cpe
 org.samba.jcifs--jcifs--1.3.19=lgpl_v2_1
 org.simpleframework--org.simpleframework--3.1.3=lgpl_v2_1
+org.springframework.security--spring-security-acl--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-config--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-core--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-ldap--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-remoting--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-taglibs--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-web--4.2.21.RELEASE_1.ONMS.1=apache_v2
