--- a/protocols/radius/src/license/THIRD-PARTY.properties
+++ b/protocols/radius/src/license/THIRD-PARTY.properties
@@ -1,2 +1,4 @@
 javax.transaction--jta--1.1=cddl_v1_1
 org.samba.jcifs--jcifs--1.3.19=lgpl_v2_1
+org.springframework.security--spring-security-core--4.2.21.RELEASE_1.ONMS.1=apache_v2
+org.springframework.security--spring-security-remoting--4.2.21.RELEASE_1.ONMS.1=apache_v2
