NMS-15776: Added docs and modified defaults

--- a/opennms-base-assembly/src/main/filtered/etc/opennms.properties
+++ b/opennms-base-assembly/src/main/filtered/etc/opennms.properties
@@ -861,6 +861,14 @@ org.opennms.newts.nan_on_counter_wrap=true
 # By default this property is not used and empty.
 # org.opennms.netmgt.search.info=
 
-# # ###### Mate Expressions ######
+# ###### Mate Expressions ######
 # Limit of recursion depth while evaluating mate expressions
 # org.opennms.mate.maxRecursionDepth=8
+
+# ###### DNS tuning options ######
+# A thread pool is used to allow concurrent DNS lookups on OpenNMS instance.
+# org.opennms.netmgt.provision.dns.client.rpc.maxThreadPoolSize=64
+# org.opennms.netmgt.provision.dns.client.rpc.queueCapacity=4096
+
+# By default hostnames are determined for a node's IP addresses during the provisioning's audit phase.
+# org.opennms.provisiond.reverseResolveRequisitionIpInterfaceHostnames=true
