--- a/pom.xml
+++ b/pom.xml
@@ -1771,6 +1771,7 @@
     <aspectjVersion>1.8.6</aspectjVersion>
     <springWebFlowVersion>2.3.4.RELEASE</springWebFlowVersion>
     <springSecurityVersion>4.2.21.RELEASE_1.ONMS.1</springSecurityVersion>
+    <springSecurityOsgiVersion>4.2.21</springSecurityOsgiVersion>
     <springLdapVersion>2.3.8.RELEASE</springLdapVersion>
     <springSecurityKerberosVersion>1.0.1.RELEASE</springSecurityKerberosVersion>
 
