--- a/pom.xml
+++ b/pom.xml
@@ -1770,7 +1770,7 @@
     <!-- ALWAYS change aspectj to match the version referenced in the spring poms -->
     <aspectjVersion>1.8.6</aspectjVersion>
     <springWebFlowVersion>2.3.4.RELEASE</springWebFlowVersion>
-    <springSecurityVersion>4.2.21.RELEASE_1.ONMS.1</springSecurityVersion>
+    <springSecurityVersion>4.2.20.RELEASE</springSecurityVersion>
     <springLdapVersion>2.3.8.RELEASE</springLdapVersion>
     <springSecurityKerberosVersion>1.0.1.RELEASE</springSecurityKerberosVersion>
 
