NMS-15763: Allow the IfTtt API key to be stored in SCV

--- a/features/ifttt/pom.xml
+++ b/features/ifttt/pom.xml
@@ -119,5 +119,9 @@
             <version>${commonsIoVersion}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.opennms.core.mate</groupId>
+            <artifactId>org.opennms.core.mate.api</artifactId>
+        </dependency>
     </dependencies>
 </project>
