Revert "pin to known working ubuntu"
This reverts commit eedf302bdeca7cc1611d4bbfc51a96174d406733.

--- a/.circleci/main/executors.yml
+++ b/.circleci/main/executors.yml
@@ -10,10 +10,10 @@ executors:
       - image: opennms/antora:3.1.1-b8850
   integration-test-executor:
     machine:
-      image: ubuntu-2204:2023.04.2
+      image: ubuntu-2204:current
   smoke-test-executor:
     machine:
-      image: ubuntu-2204:2023.04.2
+      image: ubuntu-2204:current
   ui-executor:
     docker:
       - image: cimg/node:16.3.0
