NMS-15752: Allow Elasticsearch credentials to be stored in SCV

--- a/features/jest/client/pom.xml
+++ b/features/jest/client/pom.xml
@@ -109,6 +109,10 @@
       <groupId>org.opennms</groupId>
       <artifactId>opennms-model</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.opennms.core.mate</groupId>
+      <artifactId>org.opennms.core.mate.api</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
